<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SellsAPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capture_tip">请将条码置于取景框内扫描</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载。。。</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="someperson_search">大家都在搜</string>
    <string name="app_refresh_loading">加载数据，请稍候。。。</string>
    <string name="end_page">已经到最后一页!!</string>
    <string name="title_activity_book_info_deti">BookInfoDetiActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_weclome">WeclomeActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名：</string>
    <string name="password">密 \u0020\u0020 码：</string>
    <string name="please_input_username">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="username_star">用户名：</string>
    <string name="password_star">密 \u0020 \u0020 码：</string>
    <string name="pwd1">输入六位以上密码</string>
    <string name="password_length">请再次输入密码</string>
    <string name="phone_code">验证码：</string>
    <string name="confirm_password_star">确认密码：</string>
    <string name="contacts_phone_number">*联系电话:</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="myby56_account">,欢迎回来！</string>
    <string name="account_level">会员级别:</string>
    <string name="account_balance">账户余额:</string>
    <string name="personinfo">个人中心！登录/注册</string>
    <string name="buyer">我是买家</string>
    <string name="buy_book">买书</string>
    <string name="address_manage">收发货地址</string>
    <string name="seller">我是卖家</string>
    <string name="bill_query">账单查询</string>
    <string name="account_safe">账户安全</string>
    <string name="more_info">更多选项</string>
    <string name="setting">设  \u0020\u0020 \u0020 置</string>
    <string name="exit_login">退出登录</string>
    <string name="drop_down_list_footer_default_text"></string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">无更多信息</string>
    <string name="title_activity_cart_deit">CartDeitActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="update_app_lose">更新信息获取失败！！！</string>
    <string name="update_app_notice">更新通知</string>
    <string name="update_app_backstage">后台更新</string>
    <string name="update_app_error">当前网络不可用,更新失败！！！</string>
    <string name="update_app_mobile">连接,建议在WIFI下更新！！！</string>
    <string name="update_app_wifi">连接,开始下载更新！！！</string>
    <string name="update_app_canncel">以后再说</string>
    <string name="down_finish">下载完成，请点击安装</string>
    <string name="down_loading">正在下载，请稍后。。。</string>

</resources>
